add command-line parser minimist

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	},
 	"bin": "./bin/stb-cli.js",
 	"dependencies": {
-		"gulp": "^3.8.0"
+		"gulp": "^3.8.0",
+		"minimist": "^1.1.0"
 	},
 	"license": "GPL-3.0"
 }
