--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
 	},
 	"bin": "./bin/stb-cli.js",
 	"dependencies": {
+		"del": "^1.1.0",
 		"gulp": "^3.8.0",
+		"gulp-conflict": "^0.3.0",
+		"gulp-jade": "^0.10.0",
+		"gulp-jshint": "^1.9.0",
+		"gulp-livereload": "^2.1.1",
+		"gulp-plumber": "^0.6.6",
 		"gulp-util": "^3.0.1",
-		"minimist": "^1.1.0"
+		"less": "^2.1.1",
+		"minimist": "^1.1.0",
+		"requirem": "^0.7.5",
+		"ws": "^0.6.3"
 	},
 	"license": "GPL-3.0"
 }
