--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		"gulp-livereload": "^2.1.1",
 		"gulp-plumber": "^0.6.6",
 		"gulp-util": "^3.0.1",
+		"ip": "^0.3.2",
 		"less": "^2.1.1",
 		"minimist": "^1.1.0",
+		"node-static": "^0.7.6",
 		"requirem": "^0.7.5",
 		"ws": "^0.6.3"
 	},
