--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"bin": "./bin/stb-cli.js",
 	"dependencies": {
+		"code-proxy": "^1.2.15",
 		"del": "^1.1.0",
 		"gulp": "^3.8.0",
 		"gulp-conflict": "^0.3.0",
