--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"gulp-jshint": "^1.9.0",
 		"gulp-livereload": "^2.1.1",
 		"gulp-plumber": "^0.6.6",
+		"gulp-rename": "^1.2.0",
 		"gulp-util": "^3.0.1",
 		"ip": "^0.3.2",
 		"less": "^2.1.1",
