--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"gulp-livereload": "^2.1.1",
 		"gulp-plumber": "^0.6.6",
 		"gulp-rename": "^1.2.0",
+		"gulp-runtime": "^0.5.3",
 		"gulp-util": "^3.0.1",
 		"ip": "^0.3.2",
 		"less": "^2.1.1",
@@ -28,6 +29,7 @@
 		"node-static": "^0.7.6",
 		"requirem": "^0.7.5",
 		"webpack": "^1.4.13",
+		"weinre": "^2.0.0-pre-I0Z7U9OV",
 		"ws": "^0.6.3"
 	},
 	"license": "GPL-3.0"
