--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"del": "^1.1.0",
 		"gulp": "^3.8.0",
 		"gulp-conflict": "^0.3.0",
+		"gulp-eslint": "^0.2.0",
 		"gulp-jade": "^0.10.0",
-		"gulp-jshint": "^1.9.0",
 		"gulp-livereload": "^2.1.1",
 		"gulp-plumber": "^0.6.6",
 		"gulp-rename": "^1.2.0",
