--- a/.eslintrc
+++ b/.eslintrc
@@ -5,37 +5,38 @@
 	},
 
 	"rules": {
-		"no-comma-dangle": 1,
-		"no-cond-assign": 1,
-		"no-constant-condition": 1,
-		"no-dupe-keys": 1,
-		"no-empty": 1,
-		"no-ex-assign": 1,
-		"no-extra-boolean-cast": 1,
+		"no-comma-dangle": 2,
+		"no-cond-assign": 2,
+		"no-constant-condition": 2,
+		"no-dupe-keys": 2,
+		"no-empty": 2,
+		"no-ex-assign": 2,
+		"no-extra-boolean-cast": 2,
 		"no-extra-parens": 0,
-		"no-extra-semi": 1,
-		"no-func-assign": 1,
-		"no-inner-declarations": [1, "both"],
-		"no-invalid-regexp": 1,
-		"no-irregular-whitespace": 1,
-		"no-negated-in-lhs": 1,
-		"no-obj-calls": 1,
-		"no-reserved-keys": 1,
-		"no-sparse-arrays": 1,
-		"no-unreachable": 1,
-		"use-isnan": 1,
-		"valid-jsdoc": [1, {
+		"no-extra-semi": 2,
+		"no-func-assign": 2,
+		"no-inner-declarations": [2, "both"],
+		"no-invalid-regexp": 2,
+		"no-irregular-whitespace": 2,
+		"no-negated-in-lhs": 2,
+		"no-obj-calls": 2,
+		"no-reserved-keys": 2,
+		"no-sparse-arrays": 2,
+		"no-unreachable": 2,
+		"use-isnan": 2,
+		"valid-jsdoc": [2, {
 			"prefer": {
 				"returns": "return"
 			},
 			"requireReturn": false
 		}],
-		"valid-typeof": 1,
+		"valid-typeof": 2,
 
 		"consistent-return": 1,
 		"curly": [2, "all"],
 		"dot-notation": 0,
 		"eqeqeq": 1,
+		"no-alert": 1,
 		"no-caller": 1,
 		"no-else-return": 1,
 		"no-eval": 1,
