--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
 	"dependencies": {
 		"code-proxy": "^1.2.15",
 		"del": "^1.1.0",
+		"gremlins.js": "^0.1.0",
 		"gulp": "^3.8.0",
 		"gulp-conflict": "^0.3.0",
 		"gulp-eslint": "^0.2.0",
 		"gulp-jade": "^0.10.0",
 		"gulp-livereload": "^2.1.1",
 		"gulp-plumber": "^0.6.6",
+		"gulp-preprocess": "^1.2.0",
 		"gulp-rename": "^1.2.0",
 		"gulp-runtime": "^0.5.3",
 		"gulp-util": "^3.0.1",
@@ -28,6 +30,7 @@
 		"minimist": "^1.1.0",
 		"node-static": "^0.7.6",
 		"requirem": "^0.7.5",
+		"tinycolor": "0.0.1",
 		"webpack": "^1.4.13",
 		"weinre": "^2.0.0-pre-I0Z7U9OV",
 		"ws": "^0.6.3"
