--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"less": "^2.1.1",
 		"minimist": "^1.1.0",
 		"node-static": "^0.7.6",
+		"open": "^0.0.5",
 		"requirem": "^0.7.5",
 		"tinycolor": "0.0.1",
 		"webpack": "^1.4.13",
