--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 		"gulp-rename": "^1.2.0",
 		"gulp-runtime": "^0.5.3",
 		"gulp-util": "^3.0.1",
+		"gulp-webpack": "^1.1.1",
 		"ip": "^0.3.2",
+		"jsdoc": "^3.3.0-alpha11",
 		"less": "^2.1.1",
 		"minimist": "^1.1.0",
 		"node-static": "^0.7.6",
