--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"minimist": "^1.1.0",
 		"node-static": "^0.7.6",
 		"open": "^0.0.5",
+		"pretty-hrtime": "^0.2.2",
 		"requirem": "^0.7.5",
 		"tinycolor": "0.0.1",
 		"weinre": "^2.0.0-pre-I0Z7U9OV",
