--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"bin": "./bin/stb.js",
 	"dependencies": {
 		"code-proxy": "^1.2.15",
+		"commander": "^2.6.0",
 		"del": "^1.1.0",
 		"gremlins.js": "^0.1.0",
 		"gulp": "^3.8.0",
@@ -27,7 +28,6 @@
 		"ip": "^0.3.2",
 		"jsdoc": "3.3.0-alpha13",
 		"less": "^2.1.1",
-		"minimist": "^1.1.0",
 		"node-static": "^0.7.6",
 		"open": "^0.0.5",
 		"pretty-hrtime": "^1.0.0",
