update eslint and activate disabled task

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"gremlins.js": "^0.1.0",
 		"gulp": "^3.8.0",
 		"gulp-conflict": "^0.3.0",
-		"gulp-eslint": "^0.2.0",
+		"gulp-eslint": "^0.2.2",
 		"gulp-jade": "^0.11.0",
 		"gulp-livereload": "^3.5.0",
 		"gulp-plumber": "^0.6.6",
@@ -26,7 +26,7 @@
 		"gulp-runtime": "^0.5.3",
 		"gulp-webpack": "^1.1.1",
 		"ip": "^0.3.2",
-		"jsdoc": "3.3.0-alpha13",
+		"jsdoc": "3.3.0-beta1",
 		"less": "^2.1.1",
 		"node-static": "^0.7.6",
 		"open": "^0.0.5",
