remove deprecated and add new eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,9 +19,10 @@
 	},
 
 	"rules": {
-		"no-comma-dangle": 2,
+		"comma-dangle": [2, "never"],
 		"no-cond-assign": 2,
 		"no-constant-condition": 2,
+		"no-dupe-args": 2,
 		"no-dupe-keys": 2,
 		"no-empty": 2,
 		"no-ex-assign": 2,
@@ -107,13 +108,13 @@
 		"no-multiple-empty-lines": [1, {"max": 2}],
 		"no-nested-ternary": 1,
 		"no-new-object": 1,
-		"no-space-before-semi": 1,
 		"no-spaced-func": 1,
 		"no-trailing-spaces": 1,
 		"one-var": 1,
 		"quote-props": [1, "as-needed"],
 		"quotes": [1, "single", "avoid-escape"],
 		"semi": [1, "always"],
+		"semi-spacing": [2, {"before": false, "after": true}],
 		"space-after-keywords": [1, "always"],
 		"space-before-blocks": [1, "always"],
 		"space-before-function-parentheses": [1, "always"],
