--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
 		"no-constant-condition": 2,
 		"no-dupe-args": 2,
 		"no-dupe-keys": 2,
+		"no-duplicate-case": 2,
 		"no-empty": 2,
 		"no-ex-assign": 2,
 		"no-extra-boolean-cast": 2,
