--- a/.eslintrc
+++ b/.eslintrc
@@ -103,6 +103,7 @@
 		"key-spacing": [0, { "align": "colon" }],
 		"new-cap": 1,
 		"new-parens": 1,
+		"newline-after-var": [1, "always"],
 		"no-array-constructor": 1,
 		"no-lonely-if": 0,
 		"no-mixed-spaces-and-tabs": 1,
@@ -111,14 +112,14 @@
 		"no-new-object": 1,
 		"no-spaced-func": 1,
 		"no-trailing-spaces": 1,
-		"one-var": 1,
+		"one-var": [1, "always"],
 		"quote-props": [1, "as-needed"],
 		"quotes": [1, "single", "avoid-escape"],
 		"semi": [1, "always"],
 		"semi-spacing": [2, {"before": false, "after": true}],
 		"space-after-keywords": [1, "always"],
 		"space-before-blocks": [1, "always"],
-		"space-before-function-parentheses": [1, "always"],
+		"space-before-function-paren": [1, {"anonymous": "always", "named": "always"}],
 		"space-in-brackets": [1, "never"],
 		"space-in-parens": [0, "always"],
 		"space-infix-ops": 1,
