--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
 		"gremlins.js": "^0.1.0",
 		"gulp": "^3.8.11",
 		"gulp-conflict": "^0.4.0",
-		"gulp-eslint": "^0.11.1",
+		"gulp-eslint": "^0.12.0",
 		"gulp-jade": "^1.0.0",
 		"gulp-livereload": "^3.8.0",
 		"gulp-plumber": "^1.0.0",
 		"gulp-rename": "^1.2.0",
 		"gulp-webpack": "^1.4.0",
 		"ip": "^0.3.2",
-		"jsdoc": "3.3.0-beta3",
+		"jsdoc": "3.3.0",
 		"less": "^2.5.0",
 		"node-static": "^0.7.6",
 		"open": "^0.0.5",
 		"pretty-hrtime": "^1.0.0",
 		"requirem": "^0.7.5",
-		"ssh2": "^0.4.7",
+		"ssh2": "^0.4.8",
 		"tty-colors": "^0.0.6",
 		"weinre": "^2.0.0-pre-I0Z7U9OV",
 		"ws": "^0.7.1"
