--- a/.eslintrc
+++ b/.eslintrc
@@ -102,6 +102,7 @@
 		"eol-last": 1,
 		"func-names": 0,
 		"key-spacing": [0, { "align": "colon" }],
+		"linebreak-style": [2, "unix"],
 		"new-cap": 1,
 		"new-parens": 1,
 		"newline-after-var": [1, "always"],
@@ -112,7 +113,8 @@
 		"no-nested-ternary": 1,
 		"no-new-object": 1,
 		"no-spaced-func": 1,
-		"no-trailing-spaces": 1,
+		"no-trailing-spaces": [2, {"skipBlankLines": true}],
+		"no-unneeded-ternary": 1,
 		"one-var": [1, "always"],
 		"quote-props": [1, "as-needed"],
 		"quotes": [1, "single", "avoid-escape"],
