--- a/tpl/package.json
+++ b/tpl/package.json
@@ -4,6 +4,27 @@
 	"description": "",
 	"author": "",
 	"repository": {},
-	"dependencies": {},
+	"dependencies": {
+		"code-proxy": "^1.2.21",
+		"del": "^1.2.0",
+		"gremlins.js": "^0.1.0",
+		"gulp": "^3.8.11",
+		"gulp-eslint": "^0.12.0",
+		"gulp-jade": "^1.0.1",
+		"gulp-livereload": "^3.8.0",
+		"gulp-plumber": "^1.0.1",
+		"gulp-rename": "^1.2.0",
+		"gulp-util": "^3.0.4",
+		"gulp-webpack": "^1.4.0",
+		"gulp-zip": "^3.0.2",
+		"ip": "^0.3.2",
+		"less": "^2.5.1",
+		"node-static": "^0.7.6",
+		"pretty-hrtime": "^1.0.0",
+		"ssh2": "^0.4.8",
+		"tty-colors": "^0.0.6",
+		"weinre": "^2.0.0-pre-I0Z7U9OV",
+		"ws": "^0.7.2"
+	},
 	"license": "GPL-3.0"
 }
