--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
 		"node-static": "^0.7.6",
 		"open": "^0.0.5",
 		"pretty-hrtime": "^1.0.0",
-		"requirem": "^0.7.5",
 		"ssh2": "^0.4.8",
 		"tty-colors": "^0.0.6",
 		"weinre": "^2.0.0-pre-I0Z7U9OV",
@@ -37,7 +36,7 @@
 	"devDependencies": {
 		"gulp": "^3.8.11",
 		"gulp-eslint": "^0.12.0",
-		"jsdoc": "3.3.0",
+		"jsdoc": "3.3.0"
 	},
 	"keywords": [
 		"stb",
