--- a/tpl/package.json
+++ b/tpl/package.json
@@ -11,14 +11,16 @@
 		"gulp": "^3.8.11",
 		"gulp-eslint": "^0.12.0",
 		"gulp-jade": "^1.0.1",
+		"gulp-less": "^3.0.3",
 		"gulp-livereload": "^3.8.0",
+		"gulp-minify-css": "^1.1.1",
 		"gulp-plumber": "^1.0.1",
 		"gulp-rename": "^1.2.0",
+		"gulp-sourcemaps": "^1.5.2",
 		"gulp-util": "^3.0.4",
 		"gulp-webpack": "^1.4.0",
 		"gulp-zip": "^3.0.2",
 		"ip": "^0.3.2",
-		"less": "^2.5.1",
 		"node-static": "^0.7.6",
 		"pretty-hrtime": "^1.0.0",
 		"ssh2": "^0.4.8",
