--- a/tpl/package.json
+++ b/tpl/package.json
@@ -16,12 +16,14 @@
 		"gulp-minify-css": "^1.1.1",
 		"gulp-plumber": "^1.0.1",
 		"gulp-rename": "^1.2.0",
+		"gulp-repl": "^0.2.2",
 		"gulp-sourcemaps": "^1.5.2",
 		"gulp-util": "^3.0.4",
 		"gulp-webpack": "^1.4.0",
 		"gulp-zip": "^3.0.2",
 		"ip": "^0.3.2",
 		"node-static": "^0.7.6",
+		"open": "^0.0.5",
 		"pretty-hrtime": "^1.0.0",
 		"ssh2": "^0.4.8",
 		"tty-colors": "^0.0.6",
