--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "stb",
-	"version": "0.5.2",
+	"version": "1.0.0",
 	"description": "STB single page application framework.",
 	"author": {
 		"name": "Stanislav Kalashnik",
@@ -12,26 +12,8 @@
 	},
 	"bin": "./bin/stb.js",
 	"dependencies": {
-		"code-proxy": "^1.2.21",
 		"commander": "^2.8.1",
-		"del": "^1.2.0",
-		"gremlins.js": "^0.1.0",
-		"gulp-conflict": "^0.4.0",
-		"gulp-jade": "^1.0.1",
-		"gulp-livereload": "^3.8.0",
-		"gulp-plumber": "^1.0.1",
-		"gulp-rename": "^1.2.0",
-		"gulp-webpack": "^1.4.0",
-		"ip": "^0.3.2",
-		"less": "^2.5.1",
-		"mkdirp": "^0.5.1",
-		"node-static": "^0.7.6",
-		"open": "^0.0.5",
-		"pretty-hrtime": "^1.0.0",
-		"ssh2": "^0.4.8",
-		"tty-colors": "^0.0.6",
-		"weinre": "^2.0.0-pre-I0Z7U9OV",
-		"ws": "^0.7.2"
+		"ncp": "^2.0.0"
 	},
 	"devDependencies": {
 		"gulp": "^3.8.11",
