--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
 	"devDependencies": {
 		"gulp": "^3.8.11",
 		"gulp-eslint": "^0.12.0",
-		"jsdoc": "3.3.0"
+		"gulp-plumber": "^1.0.1",
+		"gulp-util": "^3.0.4",
+		"gulp-webpack": "^1.4.0",
+		"jsdoc": "3.3.0",
+		"tty-colors": "^0.0.6"
 	},
 	"keywords": [
 		"stb",
