--- a/tpl/package.json
+++ b/tpl/package.json
@@ -21,13 +21,13 @@
 		"gulp-sourcemaps": "^1.5.2",
 		"gulp-util": "^3.0.5",
 		"gulp-watch": "^4.2.4",
-		"gulp-webpack": "^1.4.0",
 		"gulp-zip": "^3.0.2",
 		"ip": "^0.3.2",
 		"node-static": "^0.7.6",
 		"open": "^0.0.5",
 		"ssh2": "^0.4.9",
 		"tty-colors": "^0.0.6",
+		"webpack-stream": "^2.0.0",
 		"weinre": "^2.0.0-pre-I0Z7U9OV",
 		"ws": "^0.7.2"
 	},
