--- a/.eslintrc
+++ b/.eslintrc
@@ -100,6 +100,7 @@
 		"no-process-exit": 0,
 
 		"array-bracket-spacing": [2, "never"],
+		"block-spacing": [2, "always"],
 		"brace-style": [1, "1tbs", {"allowSingleLine": true}],
 		"camelcase": 1,
 		"comma-spacing": [1, {"before": false, "after": true}],
