--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
 	"env": {
 		"browser": true,
-		"node": true
+		"node": true,
+		"commonjs": true
 	},
 
 	"globals": {
@@ -57,6 +58,7 @@
 		"eqeqeq": 1,
 		"no-alert": 1,
 		"no-caller": 1,
+		"no-case-declarations": 2,
 		"no-else-return": 1,
 		"no-eval": 1,
 		"no-extend-native": [2, {"exceptions": []}],
