--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,11 +26,15 @@
     "rules": {
         "comma-dangle": [2, "never"],
         "no-cond-assign": 2,
+        "no-console": 0,
         "no-constant-condition": 2,
+        "no-control-regex": 0,
+        "no-debugger": 0,
         "no-dupe-args": 2,
         "no-dupe-keys": 2,
         "no-duplicate-case": 2,
         "no-empty": 2,
+        "no-empty-character-class": 2,
         "no-ex-assign": 2,
         "no-extra-boolean-cast": 2,
         "no-extra-parens": 0,
@@ -41,104 +45,197 @@
         "no-irregular-whitespace": 2,
         "no-negated-in-lhs": 2,
         "no-obj-calls": 2,
+        "no-regex-spaces": 2,
         "no-sparse-arrays": 2,
+        "no-unexpected-multiline": 2,
         "no-unreachable": 2,
         "use-isnan": 2,
         "valid-jsdoc": [2, {
             "prefer": {
                 "returns": "return"
             },
-            "requireReturn": false
+            "preferType": {
+                "String": "string",
+                "Number": "number",
+                "Boolean": "boolean",
+                "Function": "function",
+                "Undefined": "undefined",
+                "Null": "null",
+                "array": "Array",
+                "object": "Object"
+            },
+            "requireReturn": false,
+            "requireParamDescription": true,
+            "requireReturnDescription": true,
+            "requireReturnType": true
         }],
         "valid-typeof": 2,
 
-        "consistent-return": 1,
+        "accessor-pairs": [2, {"getWithoutSet": false, "setWithoutGet": true}],
+        "array-callback-return": 2,
+        "block-scoped-var": 2,
+        "complexity": [2, 32],
+        "consistent-return": 2,
         "curly": [2, "all"],
+        "default-case": 0,
+        "dot-location": [2, "property"],
         "dot-notation": 0,
-        "eqeqeq": 1,
+        "eqeqeq": 2,
+        "guard-for-in": 0,
         "no-alert": 1,
         "no-caller": 1,
         "no-case-declarations": 2,
+        "no-div-regex": 2,
         "no-else-return": 1,
-        "no-eval": 1,
+        "no-empty-function": [2, {"allow": []}],
+        "no-empty-pattern": 2,
+        "no-eq-null": 0,
+        "no-eval": 2,
         "no-extend-native": [2, {"exceptions": []}],
-        "no-fallthrough": 1,
-        "no-floating-decimal": 1,
-        "no-implied-eval": 1,
-        "no-lone-blocks": 1,
-        "no-loop-func": 1,
+        "no-extra-bind": 2,
+        "no-extra-label": 2,
+        "no-fallthrough": 2,
+        "no-floating-decimal": 2,
+        "no-implicit-coercion": [2, {"allow": ["!!", "+"]}],
+        "no-implicit-globals": 2,
+        "no-implied-eval": 2,
+        "no-invalid-this": 2,
+        "no-iterator": 2,
+        "no-labels": 2,
+        "no-lone-blocks": 2,
+        "no-loop-func": 2,
+        "no-magic-numbers": 0,
         "no-multi-spaces": 0,
-        "no-native-reassign": 1,
-        "no-new-func": 1,
-        "no-new-wrappers": 1,
-        "no-octal": 1,
-        "no-octal-escape": 1,
-        "no-redeclare": 1,
-        "no-return-assign": 1,
+        "no-multi-str": 0,
+        "no-native-reassign": 2,
+        "no-new": 2,
+        "no-new-func": 2,
+        "no-new-wrappers": 2,
+        "no-octal": 2,
+        "no-octal-escape": 2,
+        "no-param-reassign": 0,
+        "no-process-env": 0,
+        "no-proto": 0,
+        "no-redeclare": 2,
+        "no-return-assign": 2,
         "no-script-url": 1,
-        "no-self-compare": 1,
-        "no-sequences": 1,
-        "no-unused-expressions": 1,
+        "no-self-assign": 2,
+        "no-self-compare": 2,
+        "no-sequences": 2,
+        "no-throw-literal": 2,
+        "no-unmodified-loop-condition": 1,
+        "no-unused-expressions": 2,
+        "no-unused-labels": 0,
         "no-useless-call": 2,
+        "no-useless-concat": 1,
         "no-void": 1,
-        "no-with": 1,
+        "no-warning-comments": [1, {"terms": ["todo", "fixme"], "location": "start"}],
+        "no-with": 2,
         "radix": 1,
-        "vars-on-top": 1,
+        "vars-on-top": 2,
+        "wrap-iife": [2, "inside"],
+        "yoda": 2,
 
         "strict": [2, "global"],
 
-        "no-delete-var": 1,
-        "no-label-var": 1,
+        "init-declarations": 0,
+        "no-catch-shadow": 0,
+        "no-delete-var": 2,
+        "no-label-var": 2,
         "no-shadow": 0,
-        "no-shadow-restricted-names": 1,
-        "no-undef": 1,
+        "no-shadow-restricted-names": 2,
+        "no-undef": 2,
+        "no-undef-init": 2,
         "no-undefined": 0,
-        "no-unused-vars": [1, {"vars": "all", "args": "all"}],
-        "no-use-before-define": [1, "nofunc"],
-        "no-mixed-requires": 0,
-        "no-new-require": 0,
-        "no-path-concat": 0,
+        "no-unused-vars": [2, {"vars": "all", "args": "after-used"}],
+        "no-use-before-define": [2, {"functions": true, "classes": true}],
 
-        "no-process-exit": 0,
+        "callback-return": 0,
+        "global-require": 0,
+        "handle-callback-err": [1, "error"],
+        "no-mixed-requires": 0,
+        "no-new-require": 1,
+        "no-path-concat": 2,
+        "no-process-exit": 1,
+        "no-restricted-imports": 0,
+        "no-restricted-modules": 0,
+        "no-sync": 0,
 
         "array-bracket-spacing": [2, "never"],
         "block-spacing": [2, "always"],
         "brace-style": [1, "1tbs", {"allowSingleLine": true}],
-        "camelcase": 1,
-        "comma-spacing": [1, {"before": false, "after": true}],
-        "comma-style": [1, "last"],
+        "camelcase": [2, {"properties": "always"}],
+        "comma-spacing": [2, {"before": false, "after": true}],
+        "comma-style": [2, "last"],
         "computed-property-spacing": [2, "never"],
-        "consistent-this": [1, "self"],
+        "consistent-this": [2, "self"],
         "eol-last": 1,
         "func-names": 0,
+        "func-style": 0,
+        "id-blacklist": 0,
+        "id-length": [1, {"min": 2, "max": 32, "properties": "never", "exceptions": []}],
+        "id-match": 0,
         "indent": [2, 4, {"SwitchCase": 1, "VariableDeclarator": 1}],
-        "key-spacing": [0, { "align": "colon" }],
+        "jsx-quotes": 0,
+        "key-spacing": [1, {
+            "singleLine": {
+                "beforeColon": false, "afterColon": true, "mode": "strict"
+            },
+            "multiLine": {
+                "beforeColon": false, "afterColon": true, "mode": "minimum"
+            }
+        }],
+        "keyword-spacing": [2, {"before": true, "after": true, "overrides": {}}],
         "linebreak-style": [2, "unix"],
-        "new-cap": 1,
-        "new-parens": 1,
-        "newline-after-var": [1, "always"],
-        "no-array-constructor": 1,
-        "no-lonely-if": 0,
-        "no-mixed-spaces-and-tabs": 1,
-        "no-multiple-empty-lines": [1, {"max": 2}],
+        "lines-around-comment": 0,
+        "max-depth": [2, 16],
+        "max-len": [2, {
+            "code": 150, "tabWidth": 4, "ignoreUrls": true
+        }],
+        "max-nested-callbacks": [2, 5],
+        "max-params": [2, 5],
+        "max-statements": [1, 64, {"ignoreTopLevelFunctions": false}],
+        "new-cap": 2,
+        "new-parens": 2,
+        "newline-after-var": [2, "always"],
+        "newline-per-chained-call": [2, {"ignoreChainWithDepth": 8}],
+        "no-array-constructor": 2,
+        "no-bitwise": 1,
+        "no-continue": 1,
+        "no-inline-comments": 0,
+        "no-lonely-if": 1,
+        "no-mixed-spaces-and-tabs": 2,
+        "no-multiple-empty-lines": [2, {"max": 2, "maxEOF": 0, "maxBOF": 0}],
+        "no-negated-condition": 1,
         "no-nested-ternary": 1,
-        "no-new-object": 1,
-        "no-spaced-func": 1,
+        "no-new-object": 2,
+        "no-plusplus": 0,
+        "no-restricted-syntax": 0,
+        "no-spaced-func": 2,
+        "no-ternary": 0,
         "no-trailing-spaces": [2, {"skipBlankLines": true}],
-        "no-unneeded-ternary": 1,
+        "no-underscore-dangle": [2, {"allowAfterThis": false, "allow": []}],
+        "no-unneeded-ternary": 2,
+        "no-whitespace-before-property": 2,
         "object-curly-spacing": [2, "never"],
-        "one-var": [1, "always"],
-        "quote-props": [1, "as-needed"],
-        "quotes": [1, "single", "avoid-escape"],
-        "semi": [1, "always"],
+        "one-var": [2, "always"],
+        "one-var-declaration-per-line": [2, "initializations"],
+        "operator-assignment": 0,
+        "operator-linebreak": [2, "after"],
+        "padded-blocks": 0,
+        "quote-props": [2, "as-needed"],
+        "quotes": [2, "single", "avoid-escape"],
+        "require-jsdoc": 0,
+        "semi": [2, "always"],
         "semi-spacing": [2, {"before": false, "after": true}],
-        "space-after-keywords": [1, "always"],
-        "space-before-blocks": [1, "always"],
-        "space-before-function-paren": [1, {"anonymous": "always", "named": "always"}],
-        "space-in-parens": [0, "always"],
-        "space-infix-ops": 1,
-        "space-return-throw-case": 1,
+        "sort-imports": 0,
+        "sort-vars": 0,
+        "space-before-blocks": [2, "always"],
+        "space-before-function-paren": [2, {"anonymous": "always", "named": "always"}],
+        "space-in-parens": 0,
+        "space-infix-ops": 2,
         "space-unary-ops": [1, {"words": true, "nonwords": false}],
-        "spaced-line-comment": [0, "always"]
+        "spaced-comment": 0,
+        "wrap-regex": 1
     }
 }
