--- a/tpl/package.json
+++ b/tpl/package.json
@@ -29,7 +29,8 @@
         "tty-colors": "^0.0.6",
         "webpack-stream": "^3.1.0",
         "weinre": "^2.0.0-pre-I0Z7U9OV",
-        "ws": "^1.0.1"
+        "ws": "^1.0.1",
+        "json-loader": "^0.5.4"
     },
     "license": "GPL-3.0"
 }
